# pyquad

./: .gitignore  .pyi_type_map.json  Cargo.toml  README.md  antigrav_test.py  assemble_pyi.py  clippy.toml  monkey.glb  physics_test.py  pyproject.toml  pyquad.pyi  pyroquad.pyi  tst4.py  tst6.py
pyroquad/: __init__.py
pyroquad/examples/: ___init__.py  test.py
src/: lib.rs  main.rs
src/engine/: AudioConverter.rs  CameraManager.rs  CoreLoop.rs  Cubemap.rs  EngineSetup.rs  FrameInfo.rs  PArc.rs  PAsync.rs  PAsync2.rs  PChannel.rs  PError.rs  PQuadGl.rs  collision.rs  load_ressources.rs  mod.rs  rendering.rs  structures.rs
src/engine/Drawing/: drawing.rs
src/engine/Objects/: Circle.rs  Cube.rs  Cylinder.rs  Mesh.rs  ObjectDataCache.rs  Pill.rs  Rectangle.rs  Sphere.rs  TwoDObjects.rs  mod.rs
src/engine/Objects/ObjectManagement/: ObjectManagement.rs  ObjectManager.rs  ObjectStorage.rs  UnitCube.rs  mod.rs  smart_draw.rs
src/engine/Objects/PhysicsWorld/: ApplyPhysics.rs  Rapier.rs  mod.rs
src/engine/Objects/Physics_World/: Collission.rs  Rapier.rs  mod.rs
src/engine/SHADERS/: mod.rs  shaderLoader.rs  shader_cacher.rs  shader_manager.rs
src/engine/SHADERS/Basic/: FRAG.frag  VERTEX.vert
src/engine/SHADERS/Skybox/: FRAG.frag  VERTEX.vert
src/engine/collision/: Collission.rs  Rapier.rs  collision.rs  mod.rs
src/engine/random/: DoublyLinkedList.rs  PythonicHashMap.rs  PythonicLinkedList.rs  mod.rs
src/engine/structures/: mochup.rs
src/py_abstractions/: Audio.rs  Camera.rs  Color.rs  Config.rs  GL.rs  Mouse.rs  Shader.rs  Textures_and_Images.rs  mod.rs  py_functions.rs  py_structs.rs
src/py_abstractions/Loading/: FileData.rs  Loading.rs  ThreadedLoading.rs  mod.rs
src/py_abstractions/structs/: Audio.rs  Camera.rs  Config.rs  GL.rs  KeyCode.rs  Mesh.rs  MouseButton.rs  RenderTarget.rs  Textures_and_Images.rs  mod.rs
src/py_abstractions/structs/GLAM/: BVec2.rs  BVec3.rs  Frozen_Vec.rs  Mat4.rs  Vec2.rs  Vec3.rs  Vec4.rs  mod.rs
src/py_abstractions/structs/Objects/: Circle.rs  ColliderOptions.rs  Cube.rs  Mesh.rs  ObjectFunctionStorage.rs  ObjectMacros.rs  PhysicsHandle.rs  Rectangle.rs  Sphere.rs  Three_D_Object.rs  Two_D_Object.rs  mod.rs
src/py_abstractions/structs/ThreeDObjects/: ColliderOptions.rs  Cube.rs  Cylinder.rs  Mesh.rs  ObjectFunctionStorage.rs  ObjectMacros.rs  PhysicsHandle.rs  Pill.rs  Sphere.rs  Three_D_Object.rs  Two_D_Object.rs  mod.rs
src/py_abstractions/structs/TwoDObjects/: Circle.rs  Rectangle.rs  TwoDObjectMacros.rs  mod.rs
src/python/pyroquad/: __init__.py  _pyroquad.pyi
src/python/pyroquad/examples/: PlayerCamera.py  __init__.py
