[package]
name = "pyquad"
version = "0.1.0"
edition = "2024"


# uncomment the following 2 lines if building library
[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "stub_gen"
doc = false



[dependencies]

#core dependency
macroquad = { version = "0.4.14", features = ["audio"] }

#used to build the python library
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py310"] } # "abi3-py310" for python >=3.10 and "abi3-py37" for python 3.7,3.8,3.9

# a VERY slightly modified version of pyo3 stub gen, which allows it to compile to python 3.7 and 3.8
# modification was only one line, so feel free to drop support for python 3.7 if any cool new features release
# the alternative to this would be:   #pyo3-stub-gen = "0.14.0"
pyo3-stub-gen = {git = "https://github.com/Ludwig-000/pyo3-stub-gen", branch = "patch-1"}

crossbeam = "0.8" # used for the main Command Queue inside lib.rs
regex = "1" # used for URL-Parsing.
reqwest = { version = "0.11", features = ["blocking"] } # used for runtime-downloading assets.
glam = { version = "0.27", features = ["scalar-math"] } # used for vector maths.
rapier3d = { version = "0.29.0" } # used for DBTV trees.
lazy_static = "1.4"
