[package]
name = "pyroquad"
version = "0.1.0"
edition = "2024"


[lib]
name = "_pyroquad"
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "stub_gen"
doc = false


[profile.release]
overflow-checks = true #disable for release. The engine should NEVER panic.
panic = "unwind"

# #Max Optimization for final release.
#  opt-level = 3
#  lto = "fat"
#  codegen-units = 1
#  incremental = false

[dependencies]

#core dependency
macroquad = { version = "0.4.14", features = ["audio"] }

#used to build the python library
pyo3 = { version = "0.26", features = ["extension-module", "multiple-pymethods"] }

# a VERY slightly modified version of pyo3 stub gen, which allows it to compile to python 3.9
# modification was only one line, so feel free to drop support for python 3.9 if any cool new features release
# the alternative to this would be:   #pyo3-stub-gen = "0.14.0"
pyo3-stub-gen = {git = "https://github.com/Ludwig-000/pyo3-stub-gen", branch = "patch-1"}
# pyo3-stub-gen = "0.18.0"


crossbeam = "0.8" # used for the main Command Queue inside lib.rs

glam = { version = "0.27", features = ["scalar-math"] } # used for vector maths.
rapier3d = { version = "0.29.0", features = ["parallel"] } # used for DBTV trees.
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking"] } # used for runtime-downloading assets.

slotmap = "1.0.7" # fast hasher for object management.

hound = "3.5" #for converting audio formats
symphonia = { version = "0.5", features = ["mp3"] } #for converting audio formats

gltf = "1.4.1" # for parsing 3DAssets

rayon = "1.11.0" # TODO: replace with custom threading solution

[dependencies.image] # for image decoding
version = "0.25.8"
default-features = false
features = ["png", "jpeg", "webp"]


# compile using:
# maturin build --release --features abi_314 --no-default-features
#or:
# maturin build --release
[features]
abi_314 = ["pyo3/abi3", "pyo3/abi3-py314"] # python 3.14 and up
abi_310 = ["pyo3/abi3", "pyo3/abi3-py310"] # python 3.10 and up
abi_39 = ["pyo3/abi3", "pyo3/abi3-py39"] # python 3.9 and up
default = ["abi_310"]