[project]
name = "pyroquad"
version = "0.1.0"
description = "The Pyroquad game engine."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Game Engine", "Rust", "Low Level","Macroquad", "2D Render", "3D Render"]

[tool.maturin]
include = ["pyroquad.pyi", "pyroquad/examples/**/*"]
abi3 = true
python-source = "."


[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin.build"


[project.urls]
Repository = "https://github.com/Ludwig-000/pyroquad"