[project]
name = "pyroquad"
version = "0.1.0"
description = "The Pyroquad game engine."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Game Engine", "Rust", "Low Level","Macroquad", "2D Render", "3D Render"]

[tool.maturin]
module-name = "pyroquad._pyroquad"
include = ["pyroquad.pyi"]
abi3 = true
python-source = "src/python"


[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin.build"


[project.urls]
Repository = "https://github.com/Ludwig-000/pyroquad"